# lit-review

./: CLAUDE.md  README.md  pyproject.toml
examples/: pipeline_demo.ipynb
lit_review/: __init__.py  agent.py  benchmark.py  error_analysis.py  memory.py  models.py  notebook.py  prompts.py  sections.py  tracing.py  validators.py
tests/: conftest.py  test_agent.py  test_benchmark.py  test_error_analysis.py  test_sections.py  test_tracing.py  test_validators.py
